# swagger/swagger.json
@@ -42,13 +42,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     }
                 }
@@ -80,13 +80,13 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     }
                 }
@@ -115,13 +115,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     }
                 }
@@ -160,19 +160,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     }
                 }
@@ -199,7 +199,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope"
+                            "$ref": "#/definitions/github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem"
                         }
                     }
                 }
@@ -207,22 +207,30 @@
         }
     },
     "definitions": {
-        "github_com_gambitier_golang-service-template_internal_presentation_http_response.Envelope": {
+        "github_com_gambitier_golang-service-template_internal_presentation_http_response.Problem": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "string"
                 },
-                "data": {},
-                "fields": {},
-                "message": {
+                "detail": {
                     "type": "string"
                 },
-                "requestId": {
+                "fields": {
+                    "type": "object",
+                    "additionalProperties": {}
+                },
+                "instance": {
                     "type": "string"
                 },
-                "success": {
+                "status": {
                     "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
